--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "clean": "rm -rf output && rm -rf .pulp-cache",
-    "build": "pulp build --censor-lib --strict",
+    "build": "pulp build",
     "test": "pulp test"
   },
   "repository": {
