--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "license": "BSD-3-Clause",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Risto-Stevcev/purescript-es6-symbols.git"
+    "url": "git://github.com/Risto-Stevcev/purescript-es6-symbols.git"
   },
   "ignore": [
     "**/.*",
